--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Server name configuration
-spring.application.name=Config-Default
+#spring.application.name=Config-Default
 
 #Eureka client configuration
 eureka.instance.prefer-ip-address=true
