--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,5 +1,5 @@
 #Server name configuration
-spring.application.name=Config-Prod
+#spring.application.name=Config-Prod
 
 #Eureka client configuration
 eureka.instance.prefer-ip-address=true
