--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,5 +1,5 @@
 #Server name configuration
-spring.application.name=Config-Dev
+#spring.application.name=Config-Dev
 
 #Eureka client configuration
 eureka.instance.prefer-ip-address=true
